--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@
     <header>
         <nav class="navbar navbar-expand-lg navegacion">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><span class="text-warning">Viaja</span>Hoy</a>
+              <a class="navbar-brand" href="index.html"><span class="text-warning">Viaja</span>Hoy</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav  ms-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-                  </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Destinos
@@ -42,11 +39,13 @@
             <video class="background-video" src="img/3945877-hd_1920_1080_30fps.mp4" autoplay muted loop></video>
             <div class="container-fluid container-uno row">
               <div class="col-6">
-                <h5>Viaja con nosotros a tu lugar favorito</h5>
+                <h5>¡Bienvenido a <span class="text-warning">Viaja</span>Hoy – Tu próximo viaje comienza aquí!</h5>
                 <p class="texto-uno">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quae neque repellendus a, numquam aspernatur modi
+                  Estamos felices de acompañarte en la aventura de descubrir nuevos destinos, vivir experiencias inolvidables y crear recuerdos que durarán toda la vida.
+                  Ya sea que sueñes con playas paradisíacas, ciudades vibrantes o escapadas a la naturaleza, acá vas a encontrar inspiración, consejos y las mejores ofertas para hacer realidad ese viaje soñado.
+                  Explorá, planificá y dejate llevar... ¡El mundo te espera!
                 </p>
-                <p class="texto-dos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores reiciendis possimus dolore error tempora odio ut eius inventore.</p>
+                <p class="texto-dos">Para mas informacion no dude en contactarnos.</p>
                 <a href="/Pages/Contacto.html"><button class="boton-uno">Contactenos</button></a>
               </div>
             </div>
