Ultima version del proyecto

--- a/Pages/Austria.html
+++ b/Pages/Austria.html
@@ -38,7 +38,7 @@
         <h1>Austria</h1>
         <div class="contenedor">
             <div class="parrafos">
-                  <span>¿Buscás una experiencia única en el corazón de Europa? Austria lo tiene todo: paisajes de ensueño, ciudades con historia y una cultura vibrante que te va a enamorar</span>
+                  <span class="titulo-paginas">Descubrí Austria</span>
                   <hr>
                   Te presentamos tres destinos que no podés perderte:
                   <ul class="lista">
