--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -43,6 +43,9 @@
           <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label">Dejanos tu mensaje</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <button class="my-3 boton-uno">
+              Enviar
+            </button>
           </div>
     </section>
     <footer>
