--- a/Pages/Newyork.html
+++ b/Pages/Newyork.html
@@ -38,7 +38,7 @@
         <h1>New York</h1>
         <div class="contenedor">
             <div class="parrafos">
-                  <span> Nueva York, la ciudad que no duerme y que vibra con energía las 24 horas. Cosmopolita, intensa y llena de historia, ofrece experiencias únicas para todo tipo de viajero.</span>
+                  <span class="titulo-paginas"> Nueva York, la ciudad que no duerme y que vibra con energía las 24 horas.</span>
                   <hr>
                   Si es tu primera vez en la Gran Manzana (o la décima), estos tres destinos son paradas obligatorias:
                   <ul class="lista">
