--- a/Pages/Rio.html
+++ b/Pages/Rio.html
@@ -38,7 +38,7 @@
         <h1>Rio de Janeiro</h1>
         <div class="contenedor">
             <div class="parrafos">      
-                    <span>🌴 Descubrí Río de Janeiro</span>
+                    <span class="titulo-paginas">🌴 Descubrí Río de Janeiro</span>
                     <hr>
                     <p>
                     Tres destinos que te van a enamorar, el estado de Río de Janeiro es mucho más que su famosa capital. Playas paradisíacas, naturaleza exuberante y pueblos llenos de encanto te esperan en esta joya del litoral brasileño. Si estás planeando tus próximas vacaciones, tomá nota de estos tres destinos imperdibles:
