--- a/Pages/Venecia.html
+++ b/Pages/Venecia.html
@@ -36,7 +36,7 @@
         <h1>Venecia</h1>
         <div class="contenedor">
             <div class="parrafos">
-                  <span> Venecia es una ciudad única en el mundo, construida sobre el agua, llena de historia, romanticismo y belleza en cada rincón. Pasear por sus canales, perderse entre callejones y descubrir joyas arquitectónicas es parte de su encanto.</span>
+                  <span class="titulo-paginas"> Venecia es una ciudad única en el mundo, construida sobre el agua, llena de historia, romanticismo y belleza en cada rincón.</span>
                   <hr>
                   Estos tres destinos son imperdibles:
                   <ul class="lista">
