--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -6,14 +6,14 @@
         <!-- link bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
         <!-- link css -->
-         <link rel="stylesheet" href="css/style.css">
+         <link rel="stylesheet" href="../css/style.css">
         <title>Contacto</title>
 </head>
 <body class="body-contacto">
     <header>
         <nav class="navbar navbar-expand-lg navegacion">
             <div class="container-fluid">
-              <a class="navbar-brand" href="/index.html"><span class="text-warning">Viaja</span>Hoy</a>
+              <a class="navbar-brand" href="../index.html"><span class="text-warning">Viaja</span>Hoy</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -24,11 +24,11 @@
                       Destinos
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item menu-uno" href="/Pages/Rio.html">Rio</a></li>
-                      <li><a class="dropdown-item menu-dos" href="/Pages/Newyork.html">New York</a></li>
+                      <li><a class="dropdown-item menu-uno" href="Rio.html">Rio</a></li>
+                      <li><a class="dropdown-item menu-dos" href="Newyork.html">New York</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item menu-tres" href="/Pages/Austria.html">Austria</a></li>
-                      <li><a class="dropdown-item menu-cuatro" href="/Pages/Venecia.html">Venecia</a></li>
+                      <li><a class="dropdown-item menu-tres" href="Austria.html">Austria</a></li>
+                      <li><a class="dropdown-item menu-cuatro" href="Venecia.html">Venecia</a></li>
                     </ul>
                   </li>
                 </ul>
