--- a/Pages/Newyork.html
+++ b/Pages/Newyork.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- link bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/stylePages.css">
+    <link rel="stylesheet" href="../css/stylePages.css">
     <title>New York</title>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navegacion">
             <div class="container-fluid">
-              <a class="navbar-brand" href="/index.html"><span class="text-warning">Viaja</span>Hoy</a>
+              <a class="navbar-brand" href="../index.html"><span class="text-warning">Viaja</span>Hoy</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -23,10 +23,10 @@
                       Destinos
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item menu-uno" href="/Pages/Rio.html">Rio</a></li>
-                      <li><a class="dropdown-item menu-dos" href="/Pages/Austria.html">Austria</a></li>
+                      <li><a class="dropdown-item menu-uno" href="Rio.html">Rio</a></li>
+                      <li><a class="dropdown-item menu-dos" href="Austria.html">Austria</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item menu-cuatro" href="/Pages/Venecia.html">Venecia</a></li>
+                      <li><a class="dropdown-item menu-cuatro" href="Venecia.html">Venecia</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -59,7 +59,7 @@
                   ✨ Viví Nueva York al máximo
                   Estos tres íconos son solo el comienzo. Cada rincón de Nueva York guarda una historia, una foto y una emoción. Prepará tu cámara, calzate zapatillas cómodas… ¡y salí a explorar la ciudad más famosa del mundo!
                 </p>
-            <a href="/Pages/Contacto.html"><button>
+            <a href="Contacto.html"><button>
                 Contactanos
             </button>
             </a>
