--- a/Pages/Rio.html
+++ b/Pages/Rio.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- link bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/stylePages.css">
+    <link rel="stylesheet" href="../css/stylePages.css">
     <title>Rio</title>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navegacion">
             <div class="container-fluid">
-              <a class="navbar-brand" href="/index.html"><span class="text-warning">Viaja</span>Hoy</a>
+              <a class="navbar-brand" href="../index.html"><span class="text-warning">Viaja</span>Hoy</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -23,10 +23,10 @@
                       Destinos
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item menu-uno" href="/Pages/Newyork.html">New York</a></li>
-                      <li><a class="dropdown-item menu-dos" href="/Pages/Austria.html">Austria</a></li>
+                      <li><a class="dropdown-item menu-uno" href="Newyork.html">New York</a></li>
+                      <li><a class="dropdown-item menu-dos" href="Austria.html">Austria</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item menu-cuatro" href="/Pages/Venecia.html">Venecia</a></li>
+                      <li><a class="dropdown-item menu-cuatro" href="Venecia.html">Venecia</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -61,7 +61,7 @@
                   ✨ Río de Janeiro te espera con sol, alegría y paisajes inolvidables
                     Ya sea que te atraigan las playas, las montañas o los paseos culturales, Río tiene el destino perfecto para vos. ¡Viví la energía de Brasil como nunca antes!                    
                 </p>
-            <a href="/Pages/Contacto.html"><button>
+            <a href="Contacto.html"><button>
                 Contactanos
             </button>
             </a>
