todas las rutas arregladas

--- a/Pages/Austria.html
+++ b/Pages/Austria.html
@@ -64,9 +64,9 @@
             </a>
             </div>
             <div class="imagenes">
-            <img class="ciudad" src="/img/Ciudad.jpg" alt=""> 
-            <img class="palacio" src="/img/Palacio.jpg" alt=""> 
-            <img class="restaurant" src="/img/Restaurant.jpg" alt="">
+            <img class="ciudad" src="../img/Ciudad.jpg" alt=""> 
+            <img class="palacio" src="../img/Palacio.jpg" alt=""> 
+            <img class="restaurant" src="../img/Restaurant.jpg" alt="">
             </div>
         </div>
     </main>
