--- a/Pages/Rio.html
+++ b/Pages/Rio.html
@@ -67,9 +67,9 @@
             </a>
             </div>
             <div class="imagenes">
-            <img class="ciudad" src="/img/Arraial do cabo.avif" alt=""> 
-            <img class="palacio" src="/img/paraty.jpg" alt=""> 
-            <img class="restaurant" src="/img/Cristo.jpg" alt="">
+            <img class="ciudad" src="../img/Arraial do cabo.avif" alt=""> 
+            <img class="palacio" src="../img/paraty.jpg" alt=""> 
+            <img class="restaurant" src="../img/Cristo.jpg" alt="">
             </div>
         </div>
     </main>
