--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   Explorá, planificá y dejate llevar... ¡El mundo te espera!
                 </p>
                 <p class="texto-dos">Para mas informacion no dude en contactarnos.</p>
-                <a href="/Pages/Contacto.html"><button class="boton-uno">Contactenos</button></a>
+                <a href="../Pages/Contacto.html"><button class="boton-uno">Contactenos</button></a>
               </div>
             </div>
           </div>
@@ -56,7 +56,7 @@
       <div class="contenedor">
         <div class="cards">
           <div class="card-info">
-            <a href="/Pages/Rio.html"><img src="img/rio.jpeg" alt=""></a>
+            <a href="../Pages/Rio.html"><img src="img/rio.jpeg" alt=""></a>
             <div class="card-info-p">
             <p>Rio de Janeiro</p>
             <p>$150.000</p>
@@ -66,7 +66,7 @@
         </div>
         <div class="cards">
           <div class="card-info">
-            <a href="/Pages/Austria.html"><img src="img/austria.jpeg" alt=""></a>
+            <a href="../Pages/Austria.html"><img src="img/austria.jpeg" alt=""></a>
             <div class="card-info-p">
               <p>Austria</p>
               <p>$250.000</p>
@@ -76,7 +76,7 @@
         </div>
         <div class="cards">
           <div class="card-info">
-            <a href="/Pages/Newyork.html"><img src="img/new york.jpeg" alt=""></a>
+            <a href="../Pages/Newyork.html"><img src="img/new york.jpeg" alt=""></a>
             <div class="card-info-p">
               <p>New York</p>
               <p>$300.000</p>
@@ -86,7 +86,7 @@
         </div>
         <div class="cards">
           <div class="card-info">
-            <a href="/Pages/Venecia.html"><img src="img/venecia.jpeg" alt=""></a>
+            <a href="../Pages/Venecia.html"><img src="img/venecia.jpeg" alt=""></a>
             <div class="card-info-p">
             <p>Venecia</p>
             <p>$500.000</p>
