--- a/Pages/Venecia.html
+++ b/Pages/Venecia.html
@@ -60,9 +60,9 @@
             </a>
             </div>
             <div class="imagenes">
-            <img class="ciudad" src="/img/Gran Canal.jpg" alt=""> 
-            <img class="palacio" src="/img/Murano.jpg" alt=""> 
-            <img class="restaurant" src="/img/Plaza.jpg" alt="">
+            <img class="ciudad" src="../img/Gran Canal.jpg" alt=""> 
+            <img class="palacio" src="../img/Murano.jpg" alt=""> 
+            <img class="restaurant" src="../img/Plaza.jpg" alt="">
             </div>
         </div>
     </main>
